samples/_failures_safe/1761701876_f502bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1590ce55.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1590ce55.c:163:35: error: expected ‘;’ at end of input
  163 |         tokens[token_count].column
      |                                   ^
      |                                   ;
./samples/SAFE/__tmp_1590ce55.c:163:9: error: expected declaration or statement at end of input
  163 |         tokens[token_count].column
      |         ^~~~~~
./samples/SAFE/__tmp_1590ce55.c:163:9: error: expected declaration or statement at end of input
